--- a/src/bd.phtml
+++ b/src/bd.phtml
@@ -19,6 +19,7 @@
            ?>
 
         </select>
+        <input class="select__default" type="submit" value="Supprimer" onclick="resetFilterBD()">
         <p id="counter">Il y a <?=$count['count']?> BDs dans le Must-Have actuellement</p>
       </div>
 
