--- a/src/comics.phtml
+++ b/src/comics.phtml
@@ -19,6 +19,7 @@
            ?>
 
         </select>
+        <input class="select__default" type="submit" value="Supprimer" onclick="resetFilterComics()">
         <p id="counter">Il y a <?=$count['count']?> comics dans le Must-Have actuellement</p>
       </div>
 
