minor change to input type

--- a/src/comics.phtml
+++ b/src/comics.phtml
@@ -19,7 +19,7 @@
            ?>
 
         </select>
-        <input class="select__default" type="submit" value="Supprimer" onclick="resetFilterComics()">
+        <input class="select__default" type="button" value="Supprimer" onclick="resetFilterComics()">
         <p id="counter">Il y a <?=$count['count']?> comics dans le Must-Have actuellement</p>
       </div>
 
