--- a/src/manga.phtml
+++ b/src/manga.phtml
@@ -19,7 +19,7 @@
            ?>
 
         </select>
-        <input class="select__default" type="submit" value="Supprimer" onclick="resetFilterManga()">
+        <input class="select__default" type="button" value="Supprimer" onclick="resetFilterManga()">
         <p id="counter">Il y a <?=$count['count']?> mangas dans le Must-Have actuellement</p>
       </div>
 
